#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.22 2008/05/14 09:21:24 jerome Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=freedom
AC_SUBST(APPNAME)
APPNAME=FREEDOM
AC_SUBST(PACKAGELIB)
PACKAGELIB=FDL

ac_default_prefix=/usr/share/what

AC_SUBST(PUBRULE)
PUBRULE=`dirname ~/anakeen/what/.`
AC_ARG_WITH(pubrule,
[  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)

AC_SUBST(DEBUG)
DEBUG=N
AC_ARG_ENABLE(debug,
[  --enable-debug   Set Debug ], DEBUG=Y)

AC_SUBST(DBHOST)
DBHOST=localhost
AC_ARG_WITH(dbhost,
[  --with-dbhost=host the PostgreSql Host (default localhost)  ], DBHOST=$withval)

AC_SUBST(DBNAME)
DBNAME=freedom
AC_ARG_WITH(dbname,
[  --with-dbname=name  the database name (default anakeen)], DBNAME=$withval)

AC_SUBST(DBUSER)
DBUSER=anakeen
AC_ARG_WITH(dbuser,
[  --with-dbuser=username  the database user (default anakeen)], DBUSER=$withval)

AC_SUBST(DBPORT)
DBPORT=5432
AC_ARG_WITH(dbport,
[  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)

AC_SUBST(HTTPUSER)
HTTPUSER=http
AC_ARG_WITH(httpuser,
[  --with-httpuser=user id for httpd process (default http)], HTTPUSER=$withval)

dnl get php pear path
AC_SUBST(PEAR)
AC_ARG_WITH(pear, \
  [  --with-pear=PHP PEAR path], \
  PEAR="$withval",
  PEAR="" \
)
if test "x$PEAR" = "x" ; then
  AC_CHECK_PROG(PEARCMD, pear, pear)
  if test "x$PEARCMD" = "x" ; then
    AC_MSG_ERROR(Could not find the pear command... Specify the PHP Pear path with --with-pear)
  fi
  AC_MSG_CHECKING(for pear config-get php_dir)
  PEAR=`"$PEARCMD" config-get php_dir`
  if test "x$PEAR" = "x" ; then
    AC_MSG_ERROR(Looks like the pear command is broken... Specify the PHP Pear path with --with-pear)
  fi
  AC_MSG_RESULT($PEAR)
fi

AC_OUTPUT(Makefile \
	App/Freedom/FREEDOM_init.php  \
	App/Fdl/FDL_init.php \
	App/Generic/GENERIC_init.php \
	App/Usercard/USERCARD_init.php \
	App/Fusers/FUSERS_init.php \
        App/Onefam/ONEFAM_init.php \
        App/Fgsearch/FGSEARCH_init.php \
	Api/SetDocVaultIndex.php \
	App/Fdl/tsearch2_fr.sql \
	FREEDOM.cron \
	FREEDOM.vault \
        freedom.spec \
	debian/changelog)
