#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.3 2007/06/11 14:46:14 eric Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=TE

ac_default_prefix=/usr/share/pear

AC_SUBST(PUBRULE)
PUBRULE=`dirname ~/anakeen/what/.`
AC_ARG_WITH(pubrule,
[  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)

AC_SUBST(DEBUG)
DEBUG=N
AC_ARG_ENABLE(debug,
[  --enable-debug   Set Debug ], DEBUG=Y)

AC_SUBST(tedinit)
tedinit=ted.fc
AC_ARG_WITH(tedinit,
[  --with-tedinit=init script file  ], tedinit=$withval)




AC_OUTPUT(Makefile TE.spec ted:$tedinit )