#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.5 2006/10/16 15:35:23 marc Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=FREEDOM-WS

ac_default_prefix=/usr/share/

AC_SUBST(installdir)
installdir=/usr/share/freedomWS
AC_ARG_WITH(installdir,
[  --with-installdir=dir	Path to installation], installdir=$withval)

AC_SUBST(PUBRULE)
PUBRULE=`dirname ~/anakeen/what/.`
AC_ARG_WITH(pubrule,
[  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)

AC_SUBST(DEBUG)
DEBUG=N
AC_ARG_ENABLE(debug,
[  --enable-debug   Set Debug ], DEBUG=Y)

AC_SUBST(DBHOST)
DBHOST=localhost
AC_ARG_WITH(dbhost,
[  --with-dbhost=host the PostgreSql Host (default localhost)  ], DBHOST=$withval)

AC_SUBST(DBNAME)
DBNAME=freedom
AC_ARG_WITH(dbname,
[  --with-dbname=name  the database name (default anakeen)], DBNAME=$withval)

AC_SUBST(DBUSER)
DBUSER=anakeen
AC_ARG_WITH(dbuser,
[  --with-dbuser=username  the database user (default anakeen)], DBUSER=$withval)

AC_SUBST(DBPORT)
DBPORT=5432
AC_ARG_WITH(dbport,
[  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)


AC_SUBST(APACHECONFDIR)
APACHECONFDIR=/etc/httpd/httpd.conf
AC_ARG_WITH(apacheconfdir,
[  --with-apacheconfdir=apache config dir (default /etc/httpd/httpd.conf)], APACHECONFDIR=$withval)

AC_SUBST(whatdir)
whatdir=/usr/share/what
AC_ARG_WITH(whatdir,
[  --with-whatdir=Freedom install dir (default /usr/share/what)], whatdir=$withval)

AC_SUBST(nusoapdir)
nusoapdir=/usr/share/nusoap
AC_ARG_WITH(nusoapdir,
[  --with-nusoapdir=nusoap install dir (default /usr/share/nusoap)], nusoapdir=$withval)

AC_OUTPUT(Makefile FREEDOM-WS.spec apache_ws.conf Wsdl/freedom-doc.wsdl Class/Lib.Install.php)
